<resources>
    <string name="app_name">PreExamenLogin</string>
    <string name="nombre">Nombre</string>
    <string name="contrasena">Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="iniciar">Iniciar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contrase_a">Contraseña</string>
    <string name="hotmail">Hotmail</string>
    <string name="registrarR">Registrar</string>
    <string name="cancela">Cancela</string>
    <string name="nombreR">Nombre</string>
    <string name="repita_contrase_a">Repita contraseña</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="todo">TODO</string>
</resources>
