<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentRegistro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context="com.example.juansebastianquinayasguarin.preexamenlogin.RegistroFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/linealRegistPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="80sp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nombreRegst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/hotmailRegist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/hotmail"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/contrasenaRegist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/repitContRegist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/repita_contrase_a"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_Enviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/background_light"
            android:text="@string/registrar" />

        <Button
            android:id="@+id/btn_Cancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/background_light"
            android:text="@string/cancela" />
    </LinearLayout>
</FrameLayout>
