<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    android:orientation="vertical"
    tools:context="com.example.juansebastianquinayasguarin.preexamenlogin.LoginFragment">

    <ImageView
        android:id="@+id/IMGV_imagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/ic_launcher" />

    <LinearLayout
        android:id="@+id/layoutTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="20sp"
        android:orientation="vertical"
        android:paddingTop="5sp">

        <EditText
            android:id="@+id/ET_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:text="sebas@hotmai.com"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/ET_Contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:text="123456"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:orientation="vertical"
        android:paddingTop="5sp">

        <Button
            android:id="@+id/btn_iniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/background_light"
            android:text="@string/iniciar" />

        <Button
            android:id="@+id/btn_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/background_light"
            android:text="@string/registrar" />

    </LinearLayout>

</LinearLayout>